--- a/app/styles/scss/base/base.scss
+++ b/app/styles/scss/base/base.scss
@@ -1,5 +1,4 @@
 body {
-	@include make-row();
 	background-color: $salmon;
 }
 
